# camtrap-dp-py

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
camtrapdp/: __init__.py  deployment.py  deployments.py  media.py  observations.py  test_deployment.py  test_media.py  test_observation.py
src/camtrapdp/: deployments.py
