[project]
name = "camtrapdp"
version = "0.0.1"
authors = [{ name = "Benjamin C. Evans" }]
description = "Python library for working with the Camtrap Data Package format."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pandas>2, <3"]


[project.urls]
Homepage = "https://github.com/bencevans/camtrap-dp-py"
Issues = "https://github.com/bencevans/camtrap-dp-py/issues"
